[package]
name = "webycash-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Webcash protocol server — open-source e-cash mint with multi-database support"

[[bin]]
name = "webycash-server"
path = "src/main.rs"

[lib]
name = "webycash_server"
path = "src/lib.rs"

[features]
default = []
fdb = ["foundationdb"]

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
ractor.workspace = true
nom.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
serde_dynamo.workspace = true
redis.workspace = true
foundationdb = { workspace = true, optional = true }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
webycash-macros = { path = "../macros" }

[dev-dependencies]
tokio-test = "0.4"
