[package]
name = "webycash-server-legacy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Webcash protocol server — open-source e-cash mint with multi-database support (legacy ractor-based monolith)"
publish = false

[[bin]]
name = "webycash-server-legacy"
path = "src/main.rs"

[lib]
name = "webycash_server_legacy"
path = "src/lib.rs"

[features]
default = []
fdb = ["foundationdb"]
cuda = ["cudarc"]
wgpu-compute = ["wgpu", "pollster"]

[dependencies]
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
ractor.workspace = true
nom.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
serde_dynamo.workspace = true
redis.workspace = true
foundationdb = { workspace = true, optional = true }
cudarc = { version = "0.16", optional = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
tokio-stream.workspace = true
webycash-macros = { path = "../macros" }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "compute"
harness = false
